--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@
 # The following five lines of boilerplate have to be in your project's
 # CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.5)
-
+set(EXTRA_COMPONENT_DIRS components/lvgl)
+set(EXTRA_COMPONENT_DIRS components/lvgl_esp32_drivers)
 set(EXTRA_COMPONENT_DIRS components/spi_controller)
 set(EXTRA_COMPONENT_DIRS components/tft_drivers)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
